Fixed file reading to work with prehistoric Java